Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Oráculo da Membrana — Ritual</title>
 <style>
+  main.card{
+/* ... código existente ... */
+display: flex; /* Adicione isso */
+flex-direction: column; /* Adicione isso para garantir que o conteúdo empilhe */
+gap: 18px; /* Adicione isso para espaço entre os elementos empilhados */
+}
   :root{
     --bg:#4d1f5c;
     --card:#c22c6f;
@@ -832,5 +838,6 @@ document.addEventListener('DOMContentLoaded', ()=>{
 </script>
 </body>
 </html>
+
 
 
