Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Oráculo da Membrana — Ritual</title>
 <style>
+  /* 🌙 Ajustes responsivos para celular */
+@media (max-width: 768px) {
+  body {
+    background-size: cover;
+    background-position: center;
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+    text-align: center;
+    margin: 20px 10px;
+  }
+
+  .container, .quiz-container {
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+  button {
+    font-size: 1rem;
+    padding: 10px 20px;
+  }
+
+  .timer {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
   main.card{
 /* ... código existente ... */
 display: flex; /* Adicione isso */
@@ -838,6 +875,7 @@ document.addEventListener('DOMContentLoaded', ()=>{
 </script>
 </body>
 </html>
+
 
 
 
